<resources>
    <string name="app_name">TheShowerApp</string>
    <string name="delete_data">Delete Data</string>
    <string name="genderTitle">Gender:</string>
    <string name="race_ethnictyTitle">Race/Ethnicty:</string>
    <string name="demographics_surveyTitle">Demographics Survey</string>
    <string name="submitButtonTitle">Submit</string>
    <string name="ageTitle">Age:</string>
    <string name="school_yearTitle">School Year:</string>
    <string name="buildingTitle">Building:</string>
    <string name="collegeTitle">College:</string>
    <string name="terms_of_serviceTitle">Terms of Service</string>
    <string name="i_have_read_and_agreed_to_the_terms_of_serviceAgree">I Have Read and Agreed to the Terms of Service</string>
    <string name="i_have_read_and_agreed_to_the_terms_of_serviceDisgree">I Do Not Agree to the Terms of Service</string>
    <string name="loading_text"> </string>
    <string name="aError">Your age must be between 17 and 35</string>
    <string name="bError">You must choose between the selected buildings</string>
    <string name="cError">You must choose between the selected colleges</string>
    <string name="gError">You must choose between the selected genders</string>
    <string name="reError">You must choose between the racial/ethnic categories</string>
    <string name="syError">You must choose between the selected school years</string>
    <string name="ToSError">To use this app, you must agree to the terms of service</string>
    <string name="quick">Quick</string>
    <string name="relax">Relax</string>
    <string name="shave">Shave</string>
    <string name="startTimer">Start</string>
    <string name="stopTimer">Stop</string>
    <string name="spotifyConnect">Connect to Spotify</string>
    <string name="submitThankYou">Thank you for submitting your shower data</string>
    <string-array name="SchoolYear_Array">
        <item> </item>
        <item>Freshman</item>
        <item>Sophomore</item>
        <item>Junior</item>
        <item>Senior</item>
        <item>Graduate Student</item>
        <item>Prefer Not to Specify</item>
    </string-array>
    <string-array name="SchoolYear_Value_Array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>0</item>
    </string-array>
    <string-array name="Gender_Array">
        <item> </item>
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
        <item>Prefer Not To Specify</item>
    </string-array>
    <string-array name="Gender_Value_Array">
        <item>0</item>
        <item>M</item>
        <item>F</item>
        <item>N</item>
        <item>U</item>
    </string-array>
    <string-array name="RaceEthnicity_Array">
        <item> </item>
        <item>Non-Resident Alien</item>
        <item>Black or African American</item>
        <item>American Indian or Alaskan Native</item>
        <item>Hispanic or Latino (of any race)</item>
        <item>White</item>
        <item>Cape Verdean</item>
        <item>Two or More Races</item>
        <item>Asian</item>
        <item>Native Hawaiian or Pacific Islander</item>
        <item>Unknown, or choose not to disclose</item>
    </string-array>
    <string-array name="RaceEthnicity_Value_Array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>6</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>7</item>
    </string-array>
    <string-array name="Building_Array">
        <item> </item>
        <item>MapleRidge</item>
        <item>Chestnut</item>
        <item>Elmwood</item>
        <item>Pine Dale</item>
        <item>Oak Glen</item>
        <item>Cedar Dell West</item>
        <item>Cedar Dell South</item>
        <item>Aspen</item>
        <item>Hickory</item>
        <item>Birch</item>
        <item>Ivy</item>
        <item>Evergreen</item>
        <item>Willow</item>
        <item>Prefer Not to Specify</item>
    </string-array>
    <string-array name="Building_Value_Array">
        <item>00</item>
        <item>MR</item>
        <item>CN</item>
        <item>EW</item>
        <item>PD</item>
        <item>OG</item>
        <item>DW</item>
        <item>DS</item>
        <item>AS</item>
        <item>HK</item>
        <item>BC</item>
        <item>IV</item>
        <item>EG</item>
        <item>WL</item>
        <item>00</item>
    </string-array>
    <string-array name="College_Array">
        <item> </item>
        <item>Arts and Sciences</item>
        <item>Business</item>
        <item>Engineering</item>
        <item>Law</item>
        <item>Marine Sciences and Technology</item>
        <item>Nursing</item>
        <item>Visual and Performing Arts</item>
        <item>Prefer Not to Specify</item>
    </string-array>
    <string-array name="College_Value_Array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>0</item>
    </string-array>
</resources>