<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TV_ToS_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/terms_of_serviceTitle"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Accept_ToS"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/i_have_read_and_agreed_to_the_terms_of_serviceAgree"
        app:layout_constraintBottom_toTopOf="@+id/Decline_ToS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Decline_ToS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/i_have_read_and_agreed_to_the_terms_of_serviceDisgree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Accept_ToS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_ToS_Title">

        <LinearLayout
            android:id="@+id/ToSLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--TextView
                android:id="@+id/ToSPreamble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_text" />

            <TextView
                android:id="@+id/ToSLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_text" />

            <TextView
                android:id="@+id/ToSWarranty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_text" />

            <TextView
                android:id="@+id/ToSLiability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_text" />

            <TextView
                android:id="@+id/ToSRedistribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_text" />

            <TextView
                android:id="@+id/ToSUniversityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_text" />

            <TextView
                android:id="@+id/ToSGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_text" />

            <TextView
                android:id="@+id/ToSGeneral1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_text" />

            <TextView
                android:id="@+id/ToSGeneral2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_text" />

            <TextView
                android:id="@+id/ToSGeneral3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_text" />

            <TextView
                android:id="@+id/ToSGeneral4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_text" /-->
        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>